Methods and Results continued

--- a/Minecraft.ipynb
+++ b/Minecraft.ipynb
@@ -2403,7 +2403,15 @@
    "id": "1a1a2514-665d-45d3-9b44-ca91fbcc0350",
    "metadata": {},
    "source": [
-    "Seeing as there does not seem to be a linear relationship, in order to try to predict hours played with the player's age, K-NN regression is used as the response variable that is needed is a numerical value. "
+    "Seeing as there does not seem to be a linear relationship, in order to try to predict hours played with the player's age, K-NN regression is used as the response variable that is needed is a numerical value. Some weaknesses of K-NN regression is that it does not do well with any new observations/players that are much older than 50 and if there is a lot of players in the training data it will become slow so that is why the players that have zero playtime was removed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e48ff4b5-97e1-4560-a327-f7beee6e4ef1",
+   "metadata": {},
+   "source": [
+    "The players.csv dataset was split into a training and testing set with a proportion of 75% to test the RMSE and RMSPE of our classifier and also use cross validiation using 5 folds to figure the best K to reduce the RMSPE with validation sets."
    ]
   },
   {
