--- a/Minecraft.ipynb
+++ b/Minecraft.ipynb
@@ -3159,58 +3159,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "3907895f-32f2-4136-8653-2e2529b70e98",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 1 × 1</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>.pred</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>10.66078</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 1 × 1\n",
-       "\\begin{tabular}{l}\n",
-       " .pred\\\\\n",
-       " <dbl>\\\\\n",
-       "\\hline\n",
-       "\t 10.66078\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 1 × 1\n",
-       "\n",
-       "| .pred &lt;dbl&gt; |\n",
-       "|---|\n",
-       "| 10.66078 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  .pred   \n",
-       "1 10.66078"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "new_player<- tibble(Age = 20)\n",
-    "predict(players_best_fit, new_player)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "4609dd75-f959-4d1b-a7bd-9ba2a4114fb7",
    "metadata": {},
@@ -3224,13 +3172,13 @@
     "\n",
     "Second, looking at Figure 2 in relation with age and playtime, there does not seem to have any type of relationship between the variables hours played and age, but something to take from the visualization is that players who are younger (less than 30) are more likely to have high playtimes compared to players who are older (more than 30).\n",
     "\n",
-    "Lastly, Using regression to predict a players playtime was conducted and in figure 3, it shows that the algorithm did not a great job of predicting the playtime as it was calculated that the RMSPE was 41.1 which is quite high meaning the predicted values are quite far from the real test values. Some reasons why could be that there are many outliers in the datasets where they have much higher playtimes compared to the majority. \n",
+    "Lastly, Using regression to predict a players playtime was conducted and in figure 3, it shows that the algorithm did not do a great job of predicting the playtime as it was calculated that the RMSPE was 41.1 which is quite high meaning the predicted values are quite far from the real test values. Some reasons why could be that there are many outliers in the datasets where they have much higher playtimes compared to the majority. Looking at figure 3, the prediction values show a almost straight, flat line meaning that there is not a relationship between age and the playtime on the server.\n",
     "\n",
-    "Expectation:\n",
+    "Expectation: The expectation I had was that younger players would have more playtime on the server as young players might have more time to play, and that players that were beginners at the game would play more as it takes more time to learn the game.\n",
     "\n",
-    "Impact:\n",
+    "Impact: If such findings were correct then, based on players age and experience, running the server would be a lot easier as they would know based on the player's variables how much data people are contributing to the server and the amount of server hardware is needed.\n",
     "\n",
-    "Future Questions:"
+    "Future Questions: Future questions that could come up would be since there are a lot of players who have no playtime at all, and try to predict if a player will have not gone on to the server at all."
    ]
   },
   {
